--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css" />
     <style>
-      * a:hover {
+      * a:hover,
+      * .layout-sidebar-dark .layout-menu li a.active-route,
+      * .layout-sidebar-dark .layout-menu li a:hover,
+      * .layout-sidebar-dark .layout-menu li.active-menuitem > a {
         color: #219653 !important;
+        outline: none;
       }
       .card-img-top.img {
         height: 350px !important;
@@ -25,6 +29,34 @@
         }
       }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-L9P7J3FDH6"></script> -->
+    <script async src="https://www.googletagmanager.com/gtag/js"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      // gtag("js", new Date());
+      // gtag("config", "G-L9P7J3FDH6");
+      //  window.gtag=gtag
+    </script>
+
+    <!-- Google Tag Manager -->
+    <!-- <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-MTZVMFJ");
+    </script> -->
+    <!-- End Google Tag Manager -->
   </head>
 
   <body style="background-color: #fcfcfc">
